--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <p>My goal is to become a software engineer and support my parents.👑</p>
 
   <p>fun fact about me : I love to talk but if you need a good listener , I will be there🙋‍♀️.</p>
+  
+  <p> I am dog person </p>
  </div>
  
 </body>
